--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@google/genai": "^1.34.0",
     "lucide-react": "^0.562.0",
     "file-saver": "2.0.5",
-    "docx": "8.5.0"
+    "docx": "8.5.0",
+    "mammoth": "1.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
