--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sentinel---uk-intelligence-reporter",
+  "name": "sentinel-analytical-reporter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,13 +10,14 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
     "@google/genai": "^1.34.0",
-    "lucide-react": "^0.562.0",
-    "file-saver": "2.0.5",
     "docx": "8.5.0",
-    "mammoth": "1.6.0"
+    "file-saver": "2.0.5",
+    "lucide-react": "^0.562.0",
+    "mammoth": "1.6.0",
+    "path-browserify": "^1.0.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
