--- a/package.json
+++ b/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "sentinel-analytical-reporter",
+  "name": "sentinel---uk-intelligence-reporter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest run"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.34.0",
-    "docx": "8.5.0",
-    "file-saver": "2.0.5",
-    "lucide-react": "^0.562.0",
-    "mammoth": "1.6.0",
-    "path-browserify": "^1.0.1",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "@google/genai": "^1.34.0",
+    "lucide-react": "^0.562.0",
+    "file-saver": "2.0.5",
+    "docx": "8.5.0",
+    "mammoth": "1.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0",
-    "vitest": "^3.2.4"
+    "vite": "^6.2.0"
   }
 }
